# mofsyncondition

./: .gitattributes  pyproject.toml
mofsyncondition/conditions/: chemical_entity_regex.py  conditions_extraction.py  html_to_data.py  modified_regex_extract.py  old_synthesis_condition_extraction.py  synthesis_condition_extraction.py
mofsyncondition/db/: synthesis_data.json
mofsyncondition/db/csv/: failed_html.xlsx  ~$failed_html.xlsx
mofsyncondition/db/html/: ABIWOY.html  AFAHAR.html  AFIQOW.html  AFOQOC02.html  ALIFUY.html  AMIXOK.html  APINAP01.html  AQOBAL.html  AQUDAS.html  ARAVAR.html  ATIYIM.html  ATOBAN.html  AWASEY.html  AWIZIP.html  AXOXET.html  AYOWIW.html  BACQEB05.html  BAJQUB30.html  BERLER.html  BIJYEA.html  BIKMEQ01.html  BIRBOW.html  BOFYIG.html  BOMHOC.html  BOZTES.html  BUQSUC.html  BURBAS.html  BUTYUM.html  BUYBEE.html  CAGSAG.html  CAJJUU.html  CAPMOY.html  CAQDIL.html  CAZNIC.html  CEDLOO.html  CELYIE.html  CEMTOE.html  (+440 more)
mofsyncondition/doc/: convert_html_to_text.py  doc_parser.py
mofsyncondition/evaluation/: paragraph_model_evaluator.txt
mofsyncondition/io/: filetyper.py
mofsyncondition/models/: synpar_LR_CV_model.pkl  synpar_LR_tfv_model.pkl  synpar_NB_CV_model.pkl  synpar_NB_tfv_model.pkl
mofsyncondition/scraper/: journal_scrape.py  journal_scrape2.py  test10.html
mofsyncondition/synparagraph/: bad_of_word.py  bag_of_words.py  extract_synthesis_paragraphs.py  ml_models.py  model_evaluation.py  paragraph_classier.py  paragraph_model_evaluator.txt
mofsyncondition/test/: EDUSIF.html  Test2.html  Test3.html  Test4.html  Test5.html
(+21 files in other folders)
